--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
+    "prod": "webpack --mode=production",
     "serve": "webpack serve"
   },
   "keywords": [],
