--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
       "@babel/preset-env"
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "js-base64": "^3.7.2",
+    "query-string": "^7.0.1"
+  }
 }
